--- a/Documentation/magit.org
+++ b/Documentation/magit.org
@@ -3133,6 +3133,30 @@ push-remote and/or upstream while pushing (see [[*Pushing]]).
   buffer.  It also displays the values of the following variables and
   allows changing their values.
 
+- Command: magit-branch-config-popup
+
+  This prefix command displays the values of the following variables
+  and allows changing their values.
+
+  Unlike ~magit-branch-popup~ it only features these variables and does
+  not show any actions.  Also no key is bound to it by default.
+
+- User Option: magit-branch-separate-config-popup
+
+  This option controls whether Git variables related to branching are
+  shown directly in the main branch popup or in a separate popup.
+
+  If this is ~nil~ (the default), then ~magit-branch-popup~ displays the
+  values of the following variables and allows changing their values.
+
+  If this is non-nil, then that popup does not show these variables.
+  Instead ~C~ is bound to the separate ~magit-branch-config-popup~ command
+  in ~magit-branch-popup~ as well as in ~magit-push-popup~.
+
+  This is useful if you find the main branch popup to be too noisy
+  otherwise and on Windows where determining the values of the
+  variables can lead to a small but still noticable delay.
+
 The following variables are used to configure a specific branch.  The
 values are being displayed for the current branch (if any).  To change
 the value for another branch use a prefix argument.
